      backslashes.

  * helpers/coll/strings-helper:
    + [NT] Filter out duplicate strings.  This applies to the
      majority of all ELF binaries (except ones with very exotic
      file names with glyphs like ":").

  * t:
    + [NT] Apply patch from Johannes Schauer to fix FTBFS with
      newer dpkg that have stricter checking of build-profiles.

 -- Niels Thykier <niels@thykier.net>  Sat, 25 Oct 2014 13:20:50 +0200

lintian (2.5.29) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - dbus-policy-at-console
      - dbus-policy-without-send-destination
      - dbus-session-service-wrong-name
      - dbus-system-service-wrong-name
      - invalid-profile-name-in-build-profiles-field
      - invalid-profile-name-in-source-relation
      - invalid-restriction-formula-in-build-profiles-field
      - restriction-formula-with-debhelper-with-conflicting-version
      - restriction-formula-with-debhelper-without-debhelper-version
      - restriction-formula-with-versioned-dpkg-dev-conflict
      - restriction-formula-without-versioned-dpkg-dev-dependency
    + Removed:
      - invalid-restriction-label-in-source-relation
      - invalid-restriction-namespace-in-source-relation
      - invalid-restriction-term-in-source-relation
      - restriction-list-with-debhelper-with-conflicting-debhelper-version
      - restriction-list-with-debhelper-without-debhelper-version
      - restriction-list-with-versioned-dpkg-dev-conflict
      - restriction-list-without-versioned-dpkg-dev-dependency
      - stageX-profile-used-but-no-binary-package-dropped

  * checks/{control-file,fields}.{desc,pm}:
    + [NT] Apply patch from Johannes Schauer to support the
      new build profile syntax.  (Closes: #763773)
  * checks/dbus.{desc,pm}:
    + [NT] New check by Simon McVittie to discover some dbus
      related issues.  (Closes: #762609)
  * checks/nmu.pm:
    + [JW] Avoid chopping off trailing ">" in emails in the